test/typeerrors/Strategies/Inconsistent.type

  x :: Int ; y :: Int ; 
  ---------------------
     x +++ y :: Int;;
     
Bool == Int : "linkerkant moet een Int zijn";
